--- a/HousePricePrediction.ipynb
+++ b/HousePricePrediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsMx8fbSoAOrKPBlz0jfkO",
+      "authorship_tag": "ABX9TyPkVnOsexa3YtWl4PW+bqHt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,6 +107,28 @@
       ],
       "metadata": {
         "id": "7etJWPHT0nh1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Visualize Dataset**"
+      ],
+      "metadata": {
+        "id": "UyAwt1mT1Moj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.xlabel('Area')\n",
+        "plt.ylabel('Price')\n",
+        "plt.scatter(dataset.area,dataset.price,color='red',marker='*')"
+      ],
+      "metadata": {
+        "id": "9KuSMODe1QJP"
       },
       "execution_count": null,
       "outputs": []
